[package]
name = "logu"
version = "0.1.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2024"
description = "Log parsing for message aggregation"
repository = "https://github.com/ynqa/logu"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.49", features = ["derive"] }
futures = "0.3.31"
lru = "0.16.2"
promkit-core = "0.2.0"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
directories = "6.0.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
